--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "swarming/magento2-buzzi-publish-product-view",
   "description": "Magento 2 Buzzi.io Publish Product View",
   "type": "magento2-module",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": ["proprietary"],
   "authors": [
     {
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "swarming/magento2-buzzi-publish": "1.1.0"
+    "swarming/magento2-buzzi-publish": "^1.1.1"
   },
   "autoload": {
     "files": ["registration.php"],
